Closed Bug 169081 Opened 22 years ago Closed 22 years ago

Year/Month/Date format display as "?"

Categories

(Core :: Internationalization, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.2beta

People

(Reporter: amyy, Assigned: nhottanscp)

References

Details

(Keywords: intl, regression)

Attachments

(1 file)

Build: 09-16 trunk build on Win2k-TradChinese and linux Japanese RH7.2/7.1.

Windows build ID:
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.2a) Gecko/20020916
Netscape/7.0b1+

Steps:
1. Go to any any ftp site with year/month/date format, e.g:
ftp://ftp.mozilla.org/pub
2. Depends on OS/platform, the format data shows something like:
2002<year>09<month>01<date>, <am/pm>.

Actual result:
"?" are displayed.

Expected result:
Following by the OS language, should show as proper date name in that language.
This is a regression - N7.0RTM builds doesn't has this problem.

Nominate as nsbeta1.
Keywords: intl, nsbeta1, regression
QA Contact: ruixu → ylong
N7.0RTM: charset is marked as UTF-8, display OK.
09-16 trunk build: charset is marked as default charset, display as "?" with
UTF-8, and if default charset is match with OS langauge, e.g. set big5 on
TradChinese win2000, then will display fine.
Reassign to nhotta.
Assignee: yokoyama → nhotta
Target Milestone: --- → mozilla1.2beta
Status: NEW → ASSIGNED
Changing the browser global default charset to match with the system (client)
will have the date displayed correctly.
Comment on attachment 99528 [details] [diff] [review]
Convert formatted date to NCR like we do for string bundles.

Looks pretty simple, r=shanjian
Attachment #99528 - Flags: review+
Comment on attachment 99528 [details] [diff] [review]
Convert formatted date to NCR like we do for string bundles.

sr=jst
Attachment #99528 - Flags: superreview+
checked in to the trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Verified fixed in 09-24 trunk build.
Status: RESOLVED → VERIFIED
Blocks: blackbird
please consider taking this for the build for bug 168047. This is a very safe
fix. This fix has been land and verified on trunk already. This is a regression
on the 1.0.2 branch after we ship Netscape7
adt1.0.2+. Discussed in blackbird team meeting. Please seek drivers approval and
check in by close of business today.
Keywords: adt1.0.2adt1.0.2+
Comment on attachment 99528 [details] [diff] [review]
Convert formatted date to NCR like we do for string bundles.

a=chofmann for 1.0.2
Attachment #99528 - Flags: approval+
checked in to MOZILLA_1_0_BRANCH
Verified fixed in 10-21 branch build on linux RH7.2 and Mac 10.1.5.
marking verified1.0.2 per comments
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: