Convert formatted date to NCR like we do for string bundles, bug 169081, r=shanjian, sr=jst.